--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "my-next-project",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "dayjs": "^1.11.19",
+    "microcms-js-sdk": "^3.1.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -25,9 +25,5 @@
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
-=======
-  "dependencies": {
-    "microcms-js-sdk": "^3.1.0"
->>>>>>> 94e159b12faa1c7435d293731a03fb4ac43be248
   }
 }
